// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ContentEditableHelper setText only applies a diff to the current content Adding some text 1`] = `
<div>
  <div>
    <span>
      hello
    </span>
  </div>
</div>
`;

exports[`ContentEditableHelper setText only applies a diff to the current content Adding some text 2`] = `
<div>
  <div>
    <span>
      hello
    </span>
    <span>
      test
    </span>
  </div>
</div>
`;

exports[`ContentEditableHelper setText only applies a diff to the current content Removing some text 1`] = `
<div>
  <div>
    <span>
      hello
    </span>
    <span>
      test
    </span>
  </div>
</div>
`;

exports[`ContentEditableHelper setText only applies a diff to the current content Removing some text 2`] = `
<div>
  <div>
    <span>
      hello
    </span>
  </div>
</div>
`;
